A very nice checkpoint.

--- a/manuscript/00_main.tex
+++ b/manuscript/00_main.tex
@@ -53,6 +53,8 @@
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
 
+\newcommand{\rylan}[1]{\textcolor{red}{rylan: #1}}
+
 % Todonotes is useful during development; simply uncomment the next line
 %    and comment out the line below the next line to turn off comments
 %\usepackage[disable,textsize=tiny]{todonotes}
