--- a/manuscript/02_methodology.tex
+++ b/manuscript/02_methodology.tex
@@ -19,4 +19,4 @@ We initially evaluated our models using EleutherAI's Language Model Evaluation H
 We worked with the developers to correct the implementation (see Appendix~\ref{app:sec:math_verify_bug} for details).
 This suggests that research reporting MATH scores may have reported incorrect scores.
 The second metric we report is the \emph{Cross Entropy} of the gold reference solutions given the problems, which were previously demonstrated to be useful for studying scaling properties of generative evaluations during pretraining \citep{schaeffer2025pretrainingscalinglawsgenerative}.
-We used temperature-only sampling, beginning with temperature $0$ (``greedy''), and expanding to more temperatures in Sec.~\ref{sec:temperature}.
+We used temperature-only sampling, beginning with temperature $0$ (``greedy''), and expanding to more temperatures in Sec.~\ref{sec:inference}.
