--- a/manuscript/01_introduction.tex
+++ b/manuscript/01_introduction.tex
@@ -6,7 +6,7 @@ Evaluation aims to measure generalization on tasks the model has never seen, yet
 
 Prior research has sought to quantify the impact of test set contamination, also known as leakage, through two primary lenses. \textit{Statistical approaches} attempt to detect contamination or estimate its influence by modifying the test set, for example, by reordering, rephrasing, or replicating benchmark problems, e.g., \citep{oren2023proving, ni2025trainingbenchmarkneed, shi2024detecting, golchin2023data,golchin2024time,roberts2024to, wang2025generalization, zhang2024carefulexaminationlargelanguage}.
 In comparison, \textit{controlled approaches} -- which offer the most rigorous measurement -- intentionally contaminate pretraining corpora to quantify how specific doses of leakage inflate performance, e.g., \citep{magar2022data,jiang2024investigatingdatacontaminationpretraining,oren2023proving,yao2024data, wang2025generalization,kocyigit2025overestimation,bordt2025howmuch}.
-For a more thorough discussion, please see Appendix~\ref{app:sec:related_work} Related Work.
+For a more in-depth discussion, please see Appendix~\ref{app:sec:related_work} Related Work.
 
 \begin{figure*}[t!]
 \centering
@@ -59,9 +59,9 @@ We make the following contributions:
     
     \item \textbf{More Training (Overtraining \& Supervised Finetuning):} We find that training beyond compute-optimal with fresh data dilutes increased performance from contamination, similar to discriminative settings. We then show that SFT on the training data has opposing effects, depending on the amount of contamination in pretraining: performance improves for low contamination, but worsens for high contamination.
 
-    \item \textbf{Inference (Temperature \& Solution Length):} We identify distinct factors that modulate memorization during generation: increasing sampling temperature and increasing solution sequence length each reduce model performance, as models struggle to regurgitate long sequences without decohering.
+    \item \textbf{Inference (Temperature \& Solution Length):} We identify distinct factors that modulate memorization during generation: increasing sampling temperature and increasing solution sequence length each reduce model performance, as models struggle to regurgitate long sequences without decohering. We mathematically describe two competing forces: an exponentially decaying probability to stay on the path of the memorized solution vs an exponentially increasing probability of producing the correct next token.
 
     \item \textbf{Correction to Evaluation Library:} We identify and fix a critical implementation error in the widely used EleutherAI LM Evaluation Harness \citep{gao2024evalharness} for Math Verify Scores (Appendix~\ref{app:sec:math_verify_bug}). Our correction ensures that valid reference solutions are accurately scored as correct (raising gold reference solutions' scores from $\mathord{\sim}$70\% to 100\%), a necessary step for trustworthy reporting on mathematical benchmarks.
 \end{itemize}
 %
-Our investigation follows the standard language model lifecycle: we first examine contamination during pretraining (Sec.~\ref{sec:pretraining}), then study how post-training---both overtraining and supervised finetuning---interacts with contamination (Sec.~\ref{sec:further_training}), and finally analyze how inference-time parameters like sampling temperature and output length modulate memorization during deployment (Sec.~\ref{sec:temperature}).
+Our investigation follows the standard language model lifecycle: we first examine contamination during pretraining (Sec.~\ref{sec:pretraining}), then study how subsequent training---both overtraining and supervised finetuning---interacts with contamination (Sec.~\ref{sec:further_training}), and finally analyze how inference-time parameters like sampling temperature and output length modulate performance during deployment (Sec.~\ref{sec:inference}).
